fix mistakes, add visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
   --bg-overlay: rgba(33, 150, 243, 0.9);
   --bg-backdrop: rgba(0, 0, 0, 0.2);
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  --duration: 250ms;
+  --duration: 500ms;
 }
 
 body {
@@ -259,13 +259,16 @@ img {
 
   z-index: 1;
   opacity: 1;
+  visibility: visible;
 
-  transition: opacity var(--duration) var(--timing-function);
+  transition: opacity var(--duration) var(--timing-function),
+  visibility var(--duration) var(--timing-function);
   }
 
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
 }
 
 .backdrop.backdrop.is-hidden .modal {
